{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 37,
  "lineage": "7927d8d1-4cdc-6412-fe21-288ba2558f5e",
  "resources": [
    {
      "module": "module.vpc-simple",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-12-08T07:07:56.235-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-test-009/global/firewalls/private-firewall",
            "log_config": [],
            "name": "private-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-009/global/networks/demo-vpc",
            "priority": 1000,
            "project": "terraform-test-009",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-009/global/firewalls/private-firewall",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-private"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-simple.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-simple",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-12-08T07:07:56.345-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-test-009/global/firewalls/demo-public-firewall",
            "log_config": [],
            "name": "demo-public-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-009/global/networks/demo-vpc",
            "priority": 1000,
            "project": "terraform-test-009",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-009/global/firewalls/demo-public-firewall",
            "source_ranges": [
              "10.0.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-simple.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-simple",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-test-009/global/networks/demo-vpc",
            "mtu": 1460,
            "name": "demo-vpc",
            "project": "terraform-test-009",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-009/global/networks/demo-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc-simple",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-08T07:07:57.429-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/terraform-test-009/regions/us-central1/subnetworks/demo-private-subnetwork",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "demo-private-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-009/global/networks/demo-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-test-009",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-009/regions/us-central1/subnetworks/demo-private-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-simple.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-simple",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-08T07:07:57.292-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/terraform-test-009/regions/us-central1/subnetworks/demo-public-subnetwork",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "demo-public-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-test-009/global/networks/demo-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-test-009",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-test-009/regions/us-central1/subnetworks/demo-public-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-simple.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}